- fix failed tests